--- a/templates/policies.html
+++ b/templates/policies.html
@@ -9,6 +9,8 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #2d2d2d;
+            color: #ffffff;
         }
         .container {
             max-width: 800px;
