add style.css and font families

--- a/templates/policies.html
+++ b/templates/policies.html
@@ -4,35 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Policies</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #2d2d2d;
-            color: #ffffff;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 40px;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 1.5em;
-        }
-        h2 {
-            margin-top: 1.5em;
-            margin-bottom: 1em;
-        }
-        p {
-            margin-bottom: 1em;
-        }
-        .last-updated {
-            text-align: right;
-            font-style: italic;
-        }
-    </style>
+    <link rel="stylesheet" href="https://use.typekit.net/umh2xws.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <div class="container">
