--- a/templates/policies.html
+++ b/templates/policies.html
@@ -21,7 +21,7 @@
         <h2>Availability</h2>
         <p>Iva is provided as-is. There are no guarantees that it will be available in the future, and its purpose or availability may be changed at any time. User related data including backups may be deleted at any time. User related data including backups is non-transferable between discord accounts. Access to all or specific features of Iva may be revoked, for all or a specific user, at any time.</p>
 
-        <p class="last-updated">Last Updated: 25.04.2023</p>
+        <p class="last-updated">25.04.2023</p>
         <h1>Privacy Policy</h1>
         <p>This policy explains how Iva, a Discord bot, handles your personal information. By using Iva, you agree to this policy.</p>
     
@@ -58,7 +58,7 @@
     
         <h2>Contact Us</h2>
         <p>For questions, contact us through our Discord support channel or email at iva.gpt.dev@gmail.com.</p>
-        <p class="last-updated">Last updated: 25.04.2023</p>
+        <p class="last-updated">25.04.2023</p>
     </div>
 </body>
 </html>
