--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: owners, sans-serif;
+    font-family: source-serif-pro, serif;
     font-style: normal;
     font-weight: 300;
     margin: 0;
@@ -27,10 +27,9 @@ h2 {
     margin-bottom: 1em;
 }
 p {
-    font-family: owners, sans-serif;
+    font-family: source-serif-pro, serif;
     font-style: normal;
     font-weight: 300;
-    margin-bottom: 1em;
 }
 .last-updated {
     text-align: right;
