--- a/templates/policies.html
+++ b/templates/policies.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container">
         <h1>Terms of Service</h1>
-        <p>By inviting Iva to your discord server you agree that you have read, understood, and accepted these terms. You are also responsible for informing the members in your discord server about these terms. If you do not agree with any of these terms, you are prohibited from using or adding any version of Iva to your server.</p>
+        <p>By inviting Iva to your Discord server you agree that you have read, understood, and accepted these terms. You are also responsible for informing the members in your Discord server about these terms. If you do not agree with any of these terms, you are prohibited from using or adding any version of Iva to your server.</p>
 
         <h2>Disclaimer</h2>
-        <p>You are strictly prohibited to use Iva against the ToS of discord or for illegal purposes. We are doing our best to prevent these activities, while trying to provide the best user experience as possible. If you find people or communities using Iva against the ToS of discord or even for illegal activities, please send us an email to iva.gpt.dev@gmail.com.</p>
+        <p>You are strictly prohibited to use Iva against the ToS of Discord or for illegal purposes. We are doing our best to prevent these activities, while trying to provide the best user experience as possible. If you find people or communities using Iva against the ToS of Discord or even for illegal activities, please send us an email to iva.gpt.dev@gmail.com.</p>
 
         <h2>Proprietary Rights</h2>
         <p>We (Iva) own and retain all rights for public available data. We grant you the permission to use this available data for your own needs, but strictly disallow any commercial use. You therefore shall not sell, license or otherwise commercialize the data except if the permission was expressly granted to you.</p>
 
         <h2>Availability</h2>
-        <p>Iva is provided as-is. There are no guarantees that it will be available in the future, and its purpose or availability may be changed at any time. User related data including backups may be deleted at any time. User related data including backups is non-transferable between discord accounts. Access to all or specific features of Iva may be revoked, for all or a specific user, at any time.</p>
+        <p>Iva is provided as-is. There are no guarantees that it will be available in the future, and its purpose or availability may be changed at any time. User related data including backups may be deleted at any time. User related data including backups is non-transferable between Discord accounts. Access to all or specific features of Iva may be revoked, for all or a specific user, at any time.</p>
 
         <p class="last-updated">25.04.2023</p>
         <h1>Privacy Policy</h1>
