quote font names

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: loretta-variable, sans-serif;
+    font-family: "loretta-variable", sans-serif;
     font-style: normal;
     font-variation-settings: "wght" 300;
     margin: 0;
@@ -13,21 +13,21 @@ body {
     padding: 40px;
 }
 h1 {
-    font-family: vinila-variable, sans-serif;
+    font-family: "vinila-variable", sans-serif;
     font-style: normal;
     font-variation-settings: "slnt" 0, "wght" 400, "wdth" 125;
     text-align: center;
     margin-bottom: 1.5em;
 }
 h2 {
-    font-family: vinila-variable, sans-serif;
+    font-family: "vinila-variable", sans-serif;
     font-style: normal;
     font-variation-settings: "slnt" 0, "wght" 300, "wdth" 100;
     margin-top: 1.5em;
     margin-bottom: 1em;
 }
 p {
-    font-family: loretta-variable, sans-serif;
+    font-family: "loretta-variable", sans-serif;
     font-style: normal;
     font-variation-settings: "wght" 300;
 }
