--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <div class="app-name">iva</div>
+    <header>
+        <nav class="navbar">
+            <a href="/" class="navbar-logo">iva</a>
+        </nav>
+    </header>
     <div class="container">
         <h1>Terms of Service</h1>
         <p>By inviting Iva to your Discord server you agree that you have read, understood, and accepted these terms. You are also responsible for informing the members in your Discord server about these terms. If you do not agree with any of these terms, you are prohibited from using or adding any version of Iva to your server.</p>
