--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -55,9 +55,9 @@
     <footer>
         <div class="footer-container">
             <div class="footer-links">
-                <a href="privacy.html">privacy</a>
+                <a href="/privacy">privacy</a>
                 <span>|</span>
-                <a href="terms.html">terms</a>
+                <a href="/terms">terms</a>
             </div>
             <div class="footer-contact">
                 <p><a href="mailto:hi@iva.gg">hi@iva.gg</a></p>
