--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -6,13 +6,18 @@
     <title>Policies</title>
     <link rel="stylesheet" href="https://use.typekit.net/umh2xws.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/6en8XCp+HHAAK5GSLf2xlYtvJ8U2Q4U+9cuEnJoa3" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <a href="/" class="navbar-logo">iva</a>
+            <a href="/" class="navbar-logo">Company Name</a>
+            <a href="/add" class="add-button">
+                <i class="fab fa-discord"></i>
+                Add
+            </a>
         </nav>
-    </header>
+    </header>    
     <div class="container">
         <h1>Privacy Policy</h1>
         <p>This policy explains how Iva, a Discord bot, handles your personal information. By using Iva, you agree to this policy.</p>
