--- a/templates/terms.html
+++ b/templates/terms.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="/" class="navbar-logo">Company Name</a>
+            <a href="/" class="navbar-logo">iva</a>
             <a href="/add" class="add-button">
                 <i class="fab fa-discord"></i>
-                Add
+                add
             </a>
         </nav>
     </header>    
