update support button color

--- a/static/styles.css
+++ b/static/styles.css
@@ -116,7 +116,7 @@ footer {
 .support-button {
     display: flex;
     align-items: center;
-    background-color: #7289da;
+    background-color: #72da91;
     border-radius: 5px;
     padding: 8px 12px;
     color: #fff;
