--- a/static/styles.css
+++ b/static/styles.css
@@ -141,10 +141,11 @@ footer {
 }
 
 .nav-buttons {
-    position: absolute;
-    top: 0;
-    right: 0;
     display: flex;
     align-items: center;
-    padding: 10px;
+}
+
+.nav-buttons a{
+    text-decoration: none;
+    margin-left: 10px;
 }
