--- a/static/styles.css
+++ b/static/styles.css
@@ -105,7 +105,7 @@ footer {
 .add-button {
     font-family: "vinila-variable", sans-serif;
     font-style: normal;
-    font-variation-settings: "slnt" 0, "wght" 400, "wdth" 125;
+    font-variation-settings: "slnt" 0, "wght" 500, "wdth" 125;
     display: flex;
     align-items: center;
     background-color: #7289da;
@@ -119,7 +119,7 @@ footer {
 .support-button {
     font-family: "vinila-variable", sans-serif;
     font-style: normal;
-    font-variation-settings: "slnt" 0, "wght" 400, "wdth" 125;
+    font-variation-settings: "slnt" 0, "wght" 500, "wdth" 125;
     display: flex;
     align-items: center;
     background-color: #6abd83;
@@ -145,7 +145,7 @@ footer {
 }
 
 .support-button:hover {
-    background-color: #a0d8b1;
+    background-color: #629b73;
 }
 
 /* Mobile styles */
