update buttons update heading left add icon

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>iva</title>
     <link rel="stylesheet" href="https://use.typekit.net/umh2xws.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="icon" type="image/png" href="static/neuron.png">
 </head>
 <body>
     <header>
