--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     </header>
     <div class="container">
         <h1>welcome to iva.</h1>
-        <p>iva is a project that aims to extend the capabilities of large language models.</p>
+        <p>iva is a research project that aims to extend the capabilities of large language models.</p>
     </div>
     <footer>
         <div class="footer-container">
