--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -27,7 +27,9 @@
     </header>
     <div class="container">
         <h1>Privacy Policy</h1>
-        <p>Effective April 26, 2023</p>
+        <div class="effective-date">
+            <p>Effective April 26, 2023</p>
+        </div>
         <h2>Introduction</h2>
         <p>This policy explains how Iva, a Discord bot, handles your personal information. By using Iva, you agree to this policy.</p>
     
