--- a/templates/terms.html
+++ b/templates/terms.html
@@ -27,7 +27,10 @@
     </header>
     <div class="container">
         <h1>Terms of Service</h1>
-        <p>Effective April 26, 2023</p>
+        <div class="effective-date">
+            <p>Effective April 26, 2023</p>
+        </div>
+        <h2>Introduction</h2>
         <p>By inviting Iva to your Discord server you agree that you have read, understood, and accepted these terms. You are also responsible for informing the members in your Discord server about these terms. If you do not agree with any of these terms, you are prohibited from using or adding any version of Iva to your server.</p>
 
         <h2>Disclaimer</h2>
