apply style to p

--- a/static/styles.css
+++ b/static/styles.css
@@ -40,7 +40,7 @@ p {
     padding: 0 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-.effective-date {
+.effective-date p {
     font-family: "loretta-variable", sans-serif;
     font-style: italic;
     font-variation-settings: "wght" 400;
