update strong divs

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -58,7 +58,7 @@
         <p>We may update this policy and will post changes on this page.</p>
     
         <h2>Contact Us</h2>
-        <p>For questions, contact us through our Discord support channel or email at <strong>hi@iva.gg</strong>.</p>
+        <p>For questions, contact us through our Discord support channel or email at <div class="strong">hi@iva.gg.</div></p>
     </div>
     <footer>
         <div class="footer-container">
@@ -68,7 +68,7 @@
                 <a href="/terms">terms</a>
             </div>
             <div class="footer-contact">
-                <p><a href="mailto:hi@iva.gg">hi@iva.gg</a></p>
+                <p><a href="mailto:hi@iva.gg"><div class="strong">hi@iva.gg.</div></a></p>
             </div>
         </div>
     </footer>
