--- a/static/styles.css
+++ b/static/styles.css
@@ -45,6 +45,11 @@ p {
     font-style: normal;
     font-variation-settings: "slnt" 50, "wdth" 70, "wght" 20;
 }
+.strong p {
+    font-family: "latino-gothic-variable", sans-serif;
+    font-style: normal;
+    font-variation-settings: "slnt" 1, "wdth" 70, "wght" 40;
+}
 .navbar-logo {
     font-size: 1.5em;
     color: #fff;
