update strong divs

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                 <a href="/terms">terms</a>
             </div>
             <div class="footer-contact">
-                <p><a href="mailto:hi@iva.gg"><div class="strong">hi@iva.gg.</div></a></p>
+                <p><a href="mailto:hi@iva.gg"><div class="strong">hi@iva.gg</div></a></p>
             </div>
         </div>
     </footer>
