--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -46,9 +46,9 @@
         <h2>Data Access, Correction, and Deletion</h2>
         <p>Use these commands with Iva to delete all associated data:</p>
         <ul>
-            <li>/reset: Deletes all message content for that channel or thread.</li>
-            <li>/erase: Deletes all message content associated with a user from all channels and threads.</li>
-            <li>/setup: Deletes the API key entry associated with a user when no argument is given.</li>
+            <li><div class="strong">/reset</div>: Deletes all message content for that channel or thread.</li>
+            <li><div class="strong">/erase</div>: Deletes all message content associated with a user from all channels and threads.</li>
+            <li><div class="strong">/setup</div>: Deletes the API key entry associated with a user when no argument is given.</li>
         </ul>
     
         <h2>Age Limitations</h2>
@@ -68,7 +68,7 @@
                 <a href="/terms">terms</a>
             </div>
             <div class="footer-contact">
-                <p><a href="mailto:hi@iva.gg"><div class="strong">hi@iva.gg.</div></a></p>
+                <p><a href="mailto:hi@iva.gg"><div class="strong">hi@iva.gg</div></a></p>
             </div>
         </div>
     </footer>
