add strong divs

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -34,7 +34,7 @@
         <p>This policy explains how Iva, a Discord bot, handles your personal information. By using Iva, you agree to this policy.</p>
     
         <h2>Information Collection and Use</h2>
-        <p>Iva collects and stores the following data which is protected by AES-256 encryption at the content level and the server level at rest:</p>
+        <p>Iva collects and stores the following data which is protected by <div class="strong">AES-256</div> encryption at the content level and the server level at rest:</p>
         <ul>
             <li>Message Content</li>
             <li>API Keys</li>
