update font span

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -34,7 +34,7 @@
         <p>This policy explains how Iva, a Discord bot, handles your personal information. By using Iva, you agree to this policy.</p>
     
         <h2>Information Collection and Use</h2>
-        <p>Iva collects and stores the following data which is protected by <div class="strong">AES-256</div> encryption at the content level and the server level at rest:</p>
+        <p>Iva collects and stores the following data which is protected by <span class="strong">AES-256</span> encryption at the content level and the server level at rest:</p>
         <ul>
             <li>Message Content</li>
             <li>API Keys</li>
@@ -46,9 +46,9 @@
         <h2>Data Access, Correction, and Deletion</h2>
         <p>Use these commands with Iva to delete all associated data:</p>
         <ul>
-            <li><div class="strong">/reset</div>: Deletes all message content for that channel or thread.</li>
-            <li><div class="strong">/erase</div>: Deletes all message content associated with a user from all channels and threads.</li>
-            <li><div class="strong">/setup</div>: Deletes the API key entry associated with a user when no argument is given.</li>
+            <li><span class="strong">/reset</span>: Deletes all message content for that channel or thread.</li>
+            <li><span class="strong">/erase</span>: Deletes all message content associated with a user from all channels and threads.</li>
+            <li><span class="strong">/setup</span>: Deletes the API key entry associated with a user when no argument is given.</li>
         </ul>
     
         <h2>Age Limitations</h2>
@@ -58,7 +58,7 @@
         <p>We may update this policy and will post changes on this page.</p>
     
         <h2>Contact Us</h2>
-        <p>For questions, contact us through our Discord support channel or email at <div class="strong">hi@iva.gg.</div></p>
+        <p>For questions, contact us through our Discord support channel or email at <span class="strong">hi@iva.gg.</span></p>
     </div>
     <footer>
         <div class="footer-container">
@@ -68,7 +68,7 @@
                 <a href="/terms">terms</a>
             </div>
             <div class="footer-contact">
-                <p><a href="mailto:hi@iva.gg"><div class="strong">hi@iva.gg</div></a></p>
+                <p><a href="mailto:hi@iva.gg"><span class="strong">hi@iva.gg.</span></a></p>
             </div>
         </div>
     </footer>
