--- a/templates/terms.html
+++ b/templates/terms.html
@@ -34,7 +34,7 @@
         <p>By inviting Iva to your Discord server you agree that you have read, understood, and accepted these terms. You are also responsible for informing the members in your Discord server about these terms. If you do not agree with any of these terms, you are prohibited from using or adding any version of Iva to your server.</p>
 
         <h2>Disclaimer</h2>
-        <p>You are strictly prohibited to use Iva against the ToS of Discord or for illegal purposes. We are doing our best to prevent these activities, while trying to provide the best user experience as possible. If you find people or communities using Iva against the ToS of Discord or even for illegal activities, please send us an email to <div class="strong">hi@iva.gg.</div>.</p>
+        <p>You are strictly prohibited to use Iva against the ToS of Discord or for illegal purposes. We are doing our best to prevent these activities, while trying to provide the best user experience as possible. If you find people or communities using Iva against the ToS of Discord or even for illegal activities, please send us an email to <span class="strong">hi@iva.gg.</span>.</p>
 
         <h2>Proprietary Rights</h2>
         <p>We (Iva) own and retain all rights for public available data. We grant you the permission to use this available data for your own needs, but strictly disallow any commercial use. You therefore shall not sell, license or otherwise commercialize the data except if the permission was expressly granted to you.</p>
@@ -56,7 +56,7 @@
                 <a href="/terms">terms</a>
             </div>
             <div class="footer-contact">
-                <p><a href="mailto:hi@iva.gg"><div class="strong">hi@iva.gg</div></a></p>
+                <p><a href="mailto:hi@iva.gg"><span class="strong">hi@iva.gg.</span></a></p>
             </div>
         </div>
     </footer>
