--- a/static/styles.css
+++ b/static/styles.css
@@ -45,7 +45,7 @@ p {
     font-style: normal;
     font-variation-settings: "slnt" 50, "wdth" 70, "wght" 20;
 }
-.strong p {
+.strong {
     font-family: "latino-gothic-variable", sans-serif;
     font-style: normal;
     font-variation-settings: "slnt" 1, "wdth" 70, "wght" 40;
