update code blocks

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -46,9 +46,9 @@
         <h2>Data Access, Correction, and Deletion</h2>
         <p>Use these commands with Iva to delete all associated data:</p>
         <ul>
-            <li><code>/reset</code>: Deletes all message content for that channel or thread.</li>
-            <li><code>/erase</code>: Deletes all message content associated with a user from all channels and threads.</li>
-            <li><code>/setup</code>: Deletes the API key entry associated with a user when no argument is given.</li>
+            <li><code>/reset</code> Deletes all message content for that channel or thread.</li>
+            <li><code>/erase</code> Deletes all message content associated with a user from all channels and threads.</li>
+            <li><code>/setup</code> Deletes the API key entry associated with a user when no argument is given.</li>
         </ul>
     
         <h2>Age Limitations</h2>
