--- a/static/styles.css
+++ b/static/styles.css
@@ -34,7 +34,7 @@ code {
     font-family: "vinila-variable", sans-serif;
     font-style: normal;
     font-variation-settings: "slnt" 0, "wght" 400, "wdth" 100;
-    background-color: #f8f8f8;
+    background-color: #6b6b6b;
     padding: 2px 4px;
     border-radius: 3px;
 }
