--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -58,7 +58,7 @@
         <p>We may update this policy and will post changes on this page.</p>
     
         <h2>Contact Us</h2>
-        <p>For questions, contact us through our Discord support channel or email at <span class="strong">hi@iva.gg.</span></p>
+        <p>For questions, contact us through our Discord support channel or email at <a href="mailto:hi@iva.gg"><span class="strong">hi@iva.gg</span></a>.</p>
     </div>
     <footer>
         <div class="footer-container">
